--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mayowa Oluwaseyi Ojo's Portfolio</title>
-    <link rel="stylesheet" href="index.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="./src/css/index.css" />
+    <script src="./src/js/main.js"></script>
   </head>
   <body>
     <div class="navigation_bar">
@@ -19,10 +19,10 @@
       <div class="other_nav_bars">
         <ul>
           <li>
-            <a href="about.html">About Me</a>
+            <a href="./src/html/about.html">About Me</a>
           </li>
           <li>
-            <a href="contact.html">Contact Me</a>
+            <a href="./src/html/contact.html">Contact Me</a>
           </li>
           <li>
             <a href="https://medium.com/@thecloudfairy" target="_blank"
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="about_image">
-          <img src="./a_picture_in_purple.JPG" />
+          <img src="./src/img/a_picture_in_purple.JPG" />
         </div>
       </div>
       <div class="contact" id="contacts">
