--- a/src/html/about.html
+++ b/src/html/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mayowa Oluwaseyi Ojo's Portfolio</title>
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="../css/about.css" />
     <script src="about.js"></script>
   </head>
 
@@ -19,7 +19,7 @@
       <div class="other_nav_bars">
         <ul>
           <li>
-            <a href="index.html">Home</a>
+            <a href="/index.html">Home</a>
           </li>
           <li>
             <a href="contact.html">Contact Me</a>
@@ -40,10 +40,10 @@
     <div class="about_me">
       <div class="slider-container">
         <div class="slider">
-          <img class="slide" src="a_pic_image1.jpg" alt="mayowa-ojo-thecloudfairy 1" />
-          <img class="slide" src="a_pic_image2.jpg" alt="mayowa-ojo-thecloudfairy 2" />
-          <img class="slide" src="a_pic_image4.jpg" alt="mayowa-ojo-thecloudfairy 4" />
-          <img class="slide" src="a_pic_image3.jpg" alt="mayowa-ojo-thecloudfairy 3" />
+          <img class="slide" src="../img/a_pic_image1.jpg" alt="mayowa-ojo-thecloudfairy 1" />
+          <img class="slide" src="../img/a_pic_image2.jpg" alt="mayowa-ojo-thecloudfairy 2" />
+          <img class="slide" src="../img/a_pic_image4.jpg" alt="mayowa-ojo-thecloudfairy 4" />
+          <img class="slide" src="../img/a_pic_image3.jpg" alt="mayowa-ojo-thecloudfairy 3" />
         </div>
       </div>
       <div class="meet-me">
