--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact file</title>
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="../css/contact.css" />
   </head>
 
   <body>
@@ -21,7 +21,7 @@
             <a href="about.html">About Me</a>
           </li>
           <li>
-            <a href="index.html">Home</a>
+            <a href="/index.html">Home</a>
           </li>
           <li>
             <a href="https://medium.com/@thecloudfairy" target="_blank"
