changed the h1 to clamp and the variable to have a max of 4 rem and a min of 1 rem change classes to work directly with the h1 vs saying hello and different names to the same thing

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -4,38 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- adding the link to font awesome fonts  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Contact file</title>
+    <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/contact.css" />
   </head>
 
   <body>
-    <div class="navigation_bar">
-      <div class="main_nav_bar">
-        <h2>🌩️🧚‍♀️Portfolio</h2>
-        <p>|| Contact Me</p>
-      </div>
+    <div class="nav_bar">
+      <div class="logo">🧚‍♀️</div>
 
-      <div class="other_nav_bars">
-        <ul>
-          <li>
-            <a href="about.html">About Me</a>
-          </li>
-          <li>
-            <a href="/index.html">Home</a>
-          </li>
-          <li>
-            <a href="https://medium.com/@thecloudfairy" target="_blank"
-              >My Blog</a
-            >
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/mayowa-ojo-thecloudfairy/"
-              >LinkedIn</a
-            >
-          </li>
-        </ul>
-      </div>
+      <ul>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="./src/html/about.html">About Me</a>
+        </li>
+        <li>
+          <a class="active" href="./src/html/contact.html">Contact Me</a>
+        </li>
+        <li>
+          <a href="https://medium.com/@thecloudfairy" target="_blank"
+            >My Blog</a
+          >
+        </li>
+      </ul>
     </div>
+
     <div class="container">
       <div class="contact-box">
         <div class="left"></div>
