--- a/index.html
+++ b/index.html
@@ -20,74 +20,62 @@
          This will show something other than a bland cirle on the top of the page     
     -->
     <link rel="shortcut icon" href="./src/img/fairy.gif" type="image/x-icon" />
+    <link rel="stylesheet" href="./src/css/header.css" />
+    <link rel="stylesheet" href="./src/css/contact-links.css" />
     <link rel="stylesheet" href="./src/css/index.css" />
     <script defer src="./src/js/main.js"></script>
   </head>
   <body>
-    <div class="navigation_bar">
-      <div class="main_nav_bar">
-        <h2>🌩️🧚‍♀️Portfolio</h2>
-        <p>|| Home</p>
-      </div>
+    <div class="nav_bar">
+      <div class="logo">🧚‍♀️</div>
 
-      <div class="other_nav_bars">
-        <ul>
-          <li>
-            <a href="./src/html/about.html">About Me</a>
-          </li>
-          <li>
-            <a href="./src/html/contact.html">Contact Me</a>
-          </li>
-          <li>
-            <a href="https://medium.com/@thecloudfairy" target="_blank"
-              >My Blog</a
-            >
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/mayowa-ojo-thecloudfairy/"
-              >LinkedIn</a
-            >
-          </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="/" class="active">Home</a>
+        </li>
+        <li>
+          <a href="./src/html/about.html">About Me</a>
+        </li>
+        <li>
+          <a href="./src/html/contact.html">Contact Me</a>
+        </li>
+        <li>
+          <a href="https://medium.com/@thecloudfairy" target="_blank"
+            >My Blog</a
+          >
+        </li>
+      </ul>
+    </div>
+
+    
+    <div class="welcome">
+      <div class="greeting">
+        <h1>Hello, It's me, CloudFairy!🌩️🧚‍♀️</h1>
+        <p>
+          I am a Cloud Engineer. I solve problems for a living and work
+          diligently. Advanced experience in Linux and Mac OSs, CI/CD
+          automation/management (Jenkins) Experience with configuration
+          management and automation (Terraform, Ansible). Computer Science
+          Student at UoPeople, California, USA. Kindly find me on
+          <a href="https://github.com/Seyi-Ojo" target="_blank">
+            <i class="fa-brands fa-github"></i
+          ></a>
+
+          <i>Fun fact, I designed and coded these web pages! </i>
+        </p>
+        <!-- changed the class to hire section and the button gave an ID to it called hire button I don' t see an hireMeFormInner that can be from somewhere else  -->
+        <div class="hire_section">
+          <button id="hire-button">Hire Me</button>
+        </div>
+      </div>
+      <div class="welcome_image">
+        <img src="./src/img/welcome-image.JPG" />
       </div>
     </div>
 
-    <div class="main_body">
-      <div class="about" id="about">
-        <div class="hello_fairy">
-          <div class="hello">
-            <h1>Hello,</h1>
-          </div>
-          <div class="my_name">
-            <h1>It's me, CloudFairy!🌩️🧚‍♀️</h1>
-          </div>
-          <div class="little_intro">
-            <p>
-              I am a Cloud Engineer. I solve problems for a living and work
-              diligently.<br />
-              Advanced experience in Linux and Mac OSs, CI/CD
-              automation/management (Jenkins)<br />
-              Experience with configuration management and automation
-              (Terraform, Ansible). <br />
-              Computer Science Student at UoPeople, California, USA.<br />
-              Kindly find me on
-              <a href="https://github.com/Seyi-Ojo" target="_blank">GitHub.</a>
-              <br />
-              <i>Fun fact, I designed and coded these web pages! </i>
-            </p>
-          </div>
-          <!-- changed the class to hire section and the button gave an ID to it called hire button I don' t see an hireMeFormInner that can be from somewhere else  -->
-          <div class="hire_section">
-            <button id="hire-button">Hire Me</button>
-          </div>
-        </div>
-        <div class="about_image">
-          <img src="./src/img/a_picture_in_purple.JPG" />
-        </div>
-      </div>
-      <div class="contact" id="contacts">
-        <!-- I am taking off all those fairies and I will add icons for them instead using   -->
-        <a href="mailto:seyidiamond11@gmail.com" target="_blank">
+    <!-- <div class="contact" id="contacts"> -->
+    <!-- I am taking off all those fairies and I will add icons for them instead using   -->
+    <!-- <a href="mailto:seyidiamond11@gmail.com" target="_blank">
           <i class="fa-regular fa-envelope"></i>
         </a>
         <a href="https://github.com/Seyi-Ojo">
@@ -96,7 +84,9 @@
         <a href="https://twitter.com/the_cloudfairy">
           <i class="fa-brands fa-square-x-twitter"></i>
         </a>
-      </div>
-    </div>
+        <a href="https://www.linkedin.com/in/mayowa-ojo-thecloudfairy/">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+      </div> -->
   </body>
 </html>
