--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -14,30 +14,26 @@
     />
     <title>Contact file</title>
     <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/contact.css" />
   </head>
 
   <body>
-    <div class="nav_bar">
+    <header>
       <div class="logo">🧚‍♀️</div>
-
-      <ul>
-        <li>
-          <a href="/">Home</a>
-        </li>
-        <li>
-          <a href="./src/html/about.html">About Me</a>
-        </li>
-        <li>
-          <a class="active" href="./src/html/contact.html">Contact Me</a>
-        </li>
-        <li>
-          <a href="https://medium.com/@thecloudfairy" target="_blank"
-            >My Blog</a
-          >
-        </li>
-      </ul>
-    </div>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/src/html/about.html">About</a></li>
+          <li>
+            <a class="active" href="/src/html/contact.html">Contact Me</a>
+          </li>
+          <li>
+            <a href="https://medium.com/@thecloudfairy" target="_blank">Blog</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <div class="container">
       <div class="contact-box">
@@ -61,10 +57,21 @@
         </div>
       </div>
     </div>
-    <div class="contact" id="contacts">
-      <a href="mailto:seyidiamond11@gmail.com" target="_blank">🧚‍♀️Email🧚‍♀️</a>
-      <a href="https://github.com/Seyi-Ojo">🧚‍♀️GitHub🧚‍♀️</a>
-      <a href="https://twitter.com/the_cloudfairy">🧚‍♀️Twitter🧚‍♀️</a>
-    </div>
+    <footer>
+      <div class="contact" id="contacts">
+          <a href="mailto:seyidiamond11@gmail.com" target="_blank">
+              <i class="fa-regular fa-envelope"></i>
+          </a>
+          <a href="https://github.com/Seyi-Ojo" target="_blank">
+              <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://twitter.com/the_cloudfairy" target="_blank">
+              <i class="fa-brands fa-square-x-twitter"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/mayowa-ojo-thecloudfairy/" target="_blank">
+              <i class="fa-brands fa-linkedin"></i>
+          </a>
+      </div>
+  </footer>
   </body>
 </html>
