--- a/src/html/about.html
+++ b/src/html/about.html
@@ -6,13 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mayowa Oluwaseyi Ojo's Portfolio</title>
     <!-- adding the link to font awesome fonts  -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+ 
+    <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/about.css" />
@@ -26,7 +21,7 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a class="active" href="/src/html/about.html">About</a></li>
-          <li><a href="/src/html/contact.html">Contact Me</a></li>
+          <li><a href="/src/html/contact.html">Contact</a></li>
           <li>
             <a href="https://medium.com/@thecloudfairy" target="_blank">Blog</a>
           </li>
@@ -51,7 +46,7 @@
                   <h2>Meet Me...</h2>
                   <p>Hello there, my name is Mayowa Oluwaseyi Ojo, you can also call me CloudFairy!🌩️🧚‍♀️</p>
                   <p>I am a DevOps Engineer, a Site Reliability Engineer, and a Technical Writer looking forward to delving into Developer Relations. I love to solve problems and I do it for a living.</p>
-                  <h3>If you would like to reach out to me, kindly reach below!</h3>
+                  <h3>I warmly invite you to connect with me through the social media links provided below!</h3>
               </div>
           </div>
       </div>
@@ -59,9 +54,10 @@
 
     <footer>
       <div class="contact" id="contacts">
-          <a href="mailto:seyidiamond11@gmail.com" target="_blank">
-              <i class="fa-regular fa-envelope"></i>
-          </a>
+        <a href="mailto:seyidiamond11@gmail.com" target="_blank" aria-label="Send me an email">
+          <i class="fa-regular fa-envelope"></i>
+        </a>
+        
           <a href="https://github.com/Seyi-Ojo" target="_blank">
               <i class="fa-brands fa-github"></i>
           </a>
